...
  }

  Widget _buildSectionStack(BuildContext context) {
    if (!_loadedSections.contains(_currentEntryIndex.value)) {
      return const Center(
        child: CircularProgressIndicator(
          key: ValueKey<String>('main_page_initial_placeholder'),
        ),
      );
    }

    return IndexedStack(
      index: _currentEntryIndex.value,
...
